# syntheticseis

./: .gitignore  CMakeLists.config  CMakeLists.config.template  CMakeLists.txt  CPackConfig.cmake  InvertSeis.asta  LICENSE  README.md  SyntheticSeis-release.nsi  SyntheticSeisReadme.txt  configure.bat  invertseis_activate.bat
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: TestMain.cpp  TestMain.h
cmake/modules/: ConfigureBuildPrerequisites.cmake  conan.cmake
console/: AddingVelocityWidget.ui  EclipseGridImportPage.ui  EclipseGridViewerDialog.cpp  EclipseGridViewerDialog.h  EclipseGridViewerDialog.ui  EclipseGridWorker.cpp  EclipseGridWorker.h  FileSelectionPage.cpp  FileSelectionPage.h  FileSelectionPage.ui  ProcessingPage.ui  RegularGridImportPage.ui  RegularGridWorker.cpp  RegularGridWorker.h  SegyCreationPage.cpp  SegyCreationPage.h  SegyCreationPage.ui  SeismicVtkViewerDialog.cpp  SeismicVtkViewerDialog.h  SeismicVtkViewerDialog.ui  VtkViewerDialog.cpp  VtkViewerDialog.h  VtkViewerDialog.ui  Wizard.cpp  Wizard.h  main.cpp
console/images/: SyntheticSeisApp.qrc
core/: CMakeLists.txt  CPackConfig.cmake
core/src/: Core.cpp  Core.h  CoreDefs.h  Dictionary.h  DomainObject.cpp  DomainObject.h  Entity.cpp  Entity.h  Metaclass.cpp  Metaclass.h
core/test/: CoreTest.cpp
data/mock/: DomainObjectMock.cpp  DomainObjectMock.h
data/src/: CoreDefs.h  Data.cpp  Data.h  Dictionary.cpp  Dictionary.h  DomainObject.cpp  DomainObject.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Facade.cpp  Facade.h
data/src/geometry/: Coordinate.cpp  Coordinate.h
data/test/: DataTest.cpp
dataIO/src/: DataIO.cpp  DataIO.h  Facade.cpp  Facade.h
dataIO/src/reader/: EclipseGridReader.cpp  EclipseGridReader.h
dataIO/src/writer/: EclipseGridWriter.cpp  EclipseGridWriter.h  SEGYWriter.h
dataIO/test/: DataIOTest.cpp  EclipseGridTest.grdecl
domain/: CMakeLists.txt  CPackConfig.cmake
domain/mock/: DomainMock.h
domain/src/: CellSizeCalculator - Copia.cpp  CellSizeCalculator - Copia.h  CellSizeCalculator.cpp  CellSizeCalculator.h  ConvertRegularGridCalculator.cpp  ConvertRegularGridCalculator.h  ConvolutionRegularGridCalculator.cpp  ConvolutionRegularGridCalculator.h  Domain.cpp  Domain.h  DomainConstant.cpp  DomainConstant.h  EclipseGrid.cpp  EclipseGrid.h  EclipseGridSurface.cpp  EclipseGridSurface.h  EquationPlane.cpp  EquationPlane.h  ExtractMinimumRectangle2D.cpp  ExtractMinimumRectangle2D.h  ExtractVolumes.cpp  ExtractVolumes.h  Facade.cpp  Facade.h  GrdSurface.cpp  GrdSurface.h  ImpedanceRegularGridCalculator.cpp  ImpedanceRegularGridCalculator.h  Lithology.cpp  Lithology.h  LithologyDictionary.cpp  LithologyDictionary.h  Point2D.h  ReflectivityRegularGridCalculator.cpp  ReflectivityRegularGridCalculator.h  RegularGrid.cpp  RegularGrid.h  RickerWaveletCalculator.cpp  RickerWaveletCalculator.h  RotateVolumeCoordinate.cpp  (+9 more)
domain/test/: ConvertRegularGridCalculatorTest.cpp  ConvertRegularGridTestValues.cpp  ConvertRegularGridTestValues.h  ConvertRegularGridToMetersCalculatorTest.cpp  ConvolutionRegularGridCalculatorTest.cpp  DomainTest.cpp  DomainTestValues.cpp  DomainTestValues.h  EclipseGridSurfaceTest.cpp  ExtractMinimumRectangle2DTest.cpp  ImpedanceCalculatorTest.cpp  LithologyDictionaryTest.cpp  ReflectivityCalculatorTest.cpp  RickerWaveletCalculatorTest.cpp
geometry/src/: Coordinate.cpp  Coordinate.h  EnumUnit.cpp  EnumUnit.h  Geometry.cpp  Geometry.h  Point2D.h  Point3D.cpp  Point3D.h  Volume.cpp  Volume.h
geometry/test/: GeometryTest.cpp
gui/: CMakeLists.txt  CPackConfig.cmake
gui/src/: Gui.cpp  Gui.h  GuiConstants.cpp  GuiConstants.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SplashScreen.ui
gui/src/images/: Images.qrc
infrastructure/src/: OperatingSystemCommand.cpp  OperatingSystemCommand.h  OperatingSystemReturnCommand.h
projectManager/: CMakeLists.txt  CPackConfig.cmake
projectManager/src/: ProjectManager.cpp  ProjectManager.h
python/: adjust_segy.py  adjust_segy2.py  generate_segy.py
storage/: CMakeLists.txt  CPackConfig.cmake
storage/src/: Facade.cpp  Facade.h  RegularGridHdf5Storage.cpp  RegularGridHdf5Storage.h  Storage.cpp  Storage.h
storage/src/reader/: EclipseGridReader.cpp  EclipseGridReader.h  GrdSurfaceReader.cpp  GrdSurfaceReader.h
storage/src/writer/: EclipseGridWriter.cpp  EclipseGridWriter.h  GrdSurfaceWriter.cpp  GrdSurfaceWriter.h  RegularGridHdf5Writer.cpp  RegularGridHdf5Writer.h  SEGYWriter.cpp  SEGYWriter.h
storage/test/: EclipseGridTest.grdecl  EclipseGridTest_06_24.grdecl  StorageTest.cpp  StorageTestValues.cpp  StorageTestValues.h  grdDsaaTest.grd  gridMollesImpedance_5_5_5.h5  gridMollesReflectivity_5_5_5.h5
widgets/: CMakeLists.txt  CPackConfig.cmake
widgets/src/: EclipseGridView.cpp  EclipseGridView.h  Widgets.cpp  Widgets.h
